[package]
name = "macfmt"
version = "0.1.0"
edition = "2024"

[dependencies]
bilge = "0.2.0"
binrw = "0.15.0"
bitfield-struct = "0.11.0"
bitflags = "2.9.1"

deku = { version = "0.19.1", default-features = false, features = ["alloc", "std"] }
derivative = "2.2.0"
static_assertions = "1.1.0"
time = { version = "0.3.41", default-features = false, features = ["local-offset", "macros"] }
un68k = { version = "0.1.0", path = "../un68k" }
zerocopy = { version = "0.8.26", features = ["derive"] }

[dev-dependencies]
flate2 = "1.1.2"
miniz_oxide = "0.8.9"
