[package]
name = "rsrc-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.15.0"
clap = { version = "4.5.40", features = ["derive"] }
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
env_logger = "0.11.8"
image = "0.25.6"
macfmt = { version = "0.1.0", path = "../macfmt" }
strum = "0.27.1"
